# memristor-analyzer

./: CLAUDE_CODE_INSTRUCTIONS.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ann.rs  export.rs  file_io.rs  lib.rs  parameters.rs  smoothing.rs
src/components/: AboutDialog.tsx  Chart.tsx  ChartControls.tsx  DataTable.tsx  FileUploader.tsx  FormulaCard.tsx  HelpDialog.tsx  Layout.tsx  SmoothingControls.tsx  StatCard.tsx  Tex.tsx
src/lib/: chartExport.ts  fileParser.ts  smoothing.ts
src/pages/: ANNPage.tsx  ExportPage.tsx  ParametersPage.tsx  SmoothingPage.tsx  UploadPage.tsx
src/stores/: useAppStore.ts
src/types/: index.ts
validation/: baseline_test.py  memristor_test.py
