[package]
name = "app"
version = "1.0.11"
description = "Memristor Neural Analyzer"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
ndarray = "0.16"
ndarray-rand = "0.15"
rand = "0.8"
rand_distr = "0.4"
calamine = "0.26"
csv = "1.3"
